--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^3.14.1"
   },
   "dependencies": {
-    "discord.js": "^11.0.0"
+    "discord.js": "^11.0.0",
+    "giphy": "0.0.4"
   }
 }
