--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "discord.js": "^11.0.0",
-    "giphy": "0.0.4"
+    "giphy": "0.0.4",
+    "nlp_compromise": "^6.5.3",
+    "rss-to-json": "^1.0.2"
   }
 }
